--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   justify-content: center;
 }
+
+@media screen and (max-width: 459px) {
+  .profile__info {
+    max-width: 282px;
+  }
+}
