--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -9,6 +9,12 @@
   overflow: hidden;
 }
 
+@media screen and (min-width: 661px) and (max-width: 950px) {
+  .profile__name {
+    max-width: calc(((100vw - 660px) * (290 / 290)) + 210px);
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 880px) {
   .profile__name {
     font-size: calc(((100vw - 768px) * (15 / 112)) + 27px);
@@ -23,9 +29,16 @@
   }
 }
 
+@media screen and (min-width: 460px) and (max-width: 660px) {
+  .profile__name {
+    max-width: calc(((100vw - 460px) * (150 / 200)) + 210px);
+  }
+}
+
 @media screen and (max-width: 459px) {
   .profile__name {
     margin: 26px 0 0 25px;
     line-height: 1;
+    max-width: 282px;
   }
 }
